kubernetes/platform/security/step-ca/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.vzkn.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: step-ca
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: infrastructure
spec:
  hostnames:
    - ca.vzkn.eu
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: step-ca
          namespace: security
          port: 443
